cmake_minimum_required(VERSION 3.13)
project(CS-404)

set(CMAKE_CXX_STANDARD 17)

add_executable(lab1_1 Lab01/1_1.cpp)
add_executable(lab1_2 Lab01/1_2.cpp)

add_executable(lab2_1 Lab02/2_1.cpp)
add_executable(lab2_2 Lab02/2_2.cpp)

add_executable(lab3_1 Lab03/3_1.cpp)
add_executable(lab3_2 Lab03/3_2.cpp)
add_executable(lab3_3 Lab03/3_3.cpp)
add_executable(lab3_4 Lab03/3_4.cpp)

add_executable(lab4_1 Lab04/4_1.cpp)
